--- a/exercice_5/assets/css/style.css
+++ b/exercice_5/assets/css/style.css
@@ -1,4 +1,4 @@
 body{
 
-    background-image: url(http://yesofcorsa.com/wp-content/uploads/2017/10/Gray-Best-Wallpaper.jpg);
+    background-image: url("../image/greybackground.jpg");
 }
